--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: datatable_plus
-description: Inspired by the Flutter Material Datatable, offers a simpler API to make tables customizable
+description: Inspired by the Flutter Material Datatable, offers a simpler API to
+  make tables customizable
 version: 0.0.1
 homepage: null
 
@@ -24,7 +25,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter: null
-
 # To add assets to your package, add an assets section, like this:
 # assets:
 #   - images/a_dot_burr.jpeg
