--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,13 @@ dependencies:
     sdk: flutter
   collection: ^1.15.0
   expandable: ^5.0.1
-  freezed_annotation: ^0.14.1
+  freezed_annotation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.1
-  freezed: ^0.14.1+3
+  freezed: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
