--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: datatable_plus
 description: Inspired by the Flutter Material Datatable, offers a simpler API to
   make tables customizable
-version: 0.0.2
+version: 0.0.3
 homepage: null
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -13,13 +13,13 @@ dependencies:
     sdk: flutter
   collection: ^1.15.0
   expandable: ^5.0.1
-  freezed_annotation: ^1.1.0
+  freezed_annotation: ^2.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.1
-  freezed: ^1.1.1
+  freezed: ^2.0.3+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
